--- a/exception_handling_python.ipynb
+++ b/exception_handling_python.ipynb
@@ -15,9 +15,9 @@
     "<h6>Error simply means something is  incorrect or an inaccurate action</h6>\n",
     "<h5>Error's are of following types:</br>\n",
     "<h6>\n",
-    "    Compile Time</br>\n",
-    "    Logical Error</br>\n",
-    "    Run Time\n",
+    "    *  Compile Time</br>\n",
+    "    *  Logical Error</br>\n",
+    "    *  Run Time\n",
     "</h6>\n",
     "<h5>"
    ]
@@ -363,6 +363,41 @@
     "    else:\n",
     "        print(a+b)\n",
     "sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple Excepts\n",
+    "<b>Multiple excepts are used to handle multiple cases of exceptions.<b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "division by zero <class 'ZeroDivisionError'>\n",
+      "Here we are handling specific errors using multiple excepts.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1=2\n",
+    "num2=0\n",
+    "try:\n",
+    "    print(num1/num2)\n",
+    "except ZeroDivisionError as e:\n",
+    "    print(e, type(e))#this except deals with only zeroDivisionError\n",
+    "except ValueError as e:\n",
+    "    print(e,type(e))\n",
+    "finally:\n",
+    "    print(\"Here we are handling specific errors using multiple excepts.\")"
    ]
   }
  ],
