Creating Custom Exception class

--- a/exception_handling_python.ipynb
+++ b/exception_handling_python.ipynb
@@ -117,7 +117,8 @@
     "5)Key Error</br>\n",
     "6)Value Error</br>\n",
     "7)Attribute Error</br>\n",
-    "</h6>"
+    "</h6>\n",
+    "<b>All the errors are derived from class Exception which acts as Base class.<b>"
    ]
   },
   {
@@ -398,6 +399,121 @@
     "    print(e,type(e))\n",
     "finally:\n",
     "    print(\"Here we are handling specific errors using multiple excepts.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### try else Block\n",
+    "\n",
+    "try:    \n",
+    "    \n",
+    "       code where error may occur.\n",
+    "except:\n",
+    "    \n",
+    "       handles exception if occurs.\n",
+    "else:\n",
+    "    \n",
+    "       executes if try successfully executes\n",
+    "       can display any info here or perform any action\n",
+    "       will not execute if execption arises.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 else block will execute only if except is not executing.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    n=2\n",
+    "    d=2\n",
+    "except Exception as e:\n",
+    "    print(e,type(e))\n",
+    "else:\n",
+    "    print(n*d, \"else block will execute only if except is not executing.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### try else Finally:\n",
+    "     \n",
+    "        here it acts same as try else but finally block will always execute.\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name 'd2' is not defined <class 'NameError'>\n",
+      "End of Execution\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    n=2\n",
+    "    d2\n",
+    "except Exception as e:\n",
+    "    print(e,type(e))\n",
+    "else:\n",
+    "    print(n*d, \"else block will execute only if except is not executing.\")\n",
+    "finally:\n",
+    "    print(\"End of Execution\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Creating Custom Exception Class.\n",
+    "\n",
+    "       we can create our own custom exception class by inheriting From Exception class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.NumberAsString'> You need to typecast number from string to integer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NumberAsString(Exception):\n",
+    "    pass\n",
+    "\n",
+    "try:\n",
+    "    number=input(\"Enter your number-\")\n",
+    "    if type(number) is not str:\n",
+    "        print(number)\n",
+    "    else:\n",
+    "        raise NumberAsString\n",
+    "except NumberAsString as e:\n",
+    "    print(type(e),\"You need to typecast number from string to integer.\")\n",
+    "    "
    ]
   }
  ],
