--- a/exception_handling_python.ipynb
+++ b/exception_handling_python.ipynb
@@ -4,22 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4>Exceptions Handling in Python.<h4>"
+    "\n",
+    "# Exceptions Handling in Python.\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5>Error & its types<h5>\n",
-    "<h6>Error simply means something is  incorrect or an inaccurate action</h6>\n",
-    "<h5>Error's are of following types:</br>\n",
-    "<h6>\n",
-    "    *  Compile Time</br>\n",
-    "    *  Logical Error</br>\n",
-    "    *  Run Time\n",
-    "</h6>\n",
-    "<h5>"
+    "#### Error & its types\n",
+    "**Error simply means something is  incorrect or an inaccurate action.**\n",
+    "\n",
+    "> ##### Error's are of following types:\n",
+    ">   -Compile Time.</br>\n",
+    ">   -Logical Error</br>\n",
+    ">   -Run Time</br>"
    ]
   },
   {
@@ -104,29 +104,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5>Exception- </h5>\n",
-    "<h6>In exception code is syntactically correct but still something is wrong (exception occurs) while executing the code.</br>\n",
-    "Exception is an object that describes error.</br>\n",
-    "Assume Exception a bucket in which all sort of errors are present(syntactic to attribute).Some of the exceptions are explained below:\n",
-    " </h6>\n",
-    "<h5>Exception types</h5>\n",
-    "<h6>1)Name Error</br>\n",
-    "2)Syntax Error</br>\n",
-    "3)Type Error</br>\n",
-    "4)Index Error</br>\n",
-    "5)Key Error</br>\n",
-    "6)Value Error</br>\n",
-    "7)Attribute Error</br>\n",
-    "</h6>\n",
-    "<b>All the errors are derived from class Exception which acts as Base class.<b>"
+    "\n",
+    "### Exception \n",
+    "***\n",
+    "> *In exception code is syntactically correct but still something is wrong (exception occurs) while executing the code.</br>*\n",
+    "> *Exception is an object that describes error.</br>*\n",
+    "> *Assume Exception a bucket in which all sort of errors are present(syntactic to attribute).* \n",
+    "\n",
+    "#### Exception types\n",
+    "**Some of the exceptions are explained below:**\n",
+    "> - Name Error</br>\n",
+    "> - Syntax Error</br>\n",
+    "> - Type Error</br>\n",
+    "> - Index Error</br>\n",
+    "> - Key Error</br>\n",
+    "> - Value Error</br>\n",
+    "> - Attribute Error</br>\n",
+    ">\n",
+    "> *All the errors are derived from class Exception which acts as Base class.*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5>Catch & Handle Exceptions</h5>\n",
-    "<h6>To do so we use the try(catch) & except(handle) block.</h6>"
+    "### Catch & Handle Exceptions\n",
+    "***\n",
+    "*To do so we use the try(catch) & except(handle) block.*\n",
+    "\n",
+    "> try:\n",
+    ">\n",
+    ">         contains code where error may occur.\n",
+    "> except:\n",
+    ">\n",
+    ">         handles exceptions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Name Error\n",
+    "\n",
+    "  ###### this exception is raised when a variable name or function name doesn't  exist in scope."
    ]
   },
   {
@@ -143,7 +163,6 @@
     }
    ],
    "source": [
-    "#Name Error- this exception is raised when a variable name or function name doesn't exist in scope.\n",
     "def fun():\n",
     "    #var= 2 #remove j from comment to execute try block.\n",
     "    try:\n",
@@ -151,6 +170,14 @@
     "    except Exception as e:\n",
     "        print(e,type(e))#this statement will execute only if there is exception in try\n",
     "fun()#function call"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### **Syntax error**\n",
+    " ###### -includes any syntactical mistake."
    ]
   },
   {
@@ -167,12 +194,20 @@
     }
    ],
    "source": [
-    "#syntax error- includes any syntactical mistake.\n",
+    "\n",
     "try:\n",
     "    z8 #assignment operator missing\n",
     "    print(z) #z not found \n",
     "except Exception as e:\n",
     "    print(e,type(e))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### **Type Error**\n",
+    "###### - This exception is raised when an operation or function is applied to an object of the wrong type."
    ]
   },
   {
@@ -189,13 +224,20 @@
     }
    ],
    "source": [
-    "#Type Error-This exception is raised when an operation or function is applied to an object of the wrong type.\n",
     "i=88\n",
     "j='99'\n",
     "try:\n",
     "   print(i-j)# error as one operand is int & other string\n",
     "except Exception as e:\n",
     "    print(e,type(e))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### **value error** \n",
+    "###### -occurs when we convert string to integer."
    ]
   },
   {
@@ -212,12 +254,19 @@
     }
    ],
    "source": [
-    "#value error- occurs when we convert string to integer.\n",
     "name=\"jerry\"\n",
     "try:\n",
     "    print(int(name))#typecasting string to integer\n",
     "except Exception as e:\n",
     "    print(e,type(e))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### **Attribute Error**\n",
+    "###### -when method/attribute is not found"
    ]
   },
   {
@@ -234,12 +283,20 @@
     }
    ],
    "source": [
-    "#attribute error-when method/attribute is not found\n",
     "l=[1,2,3]\n",
     "try:\n",
     "    print(l.find(2))#find is a method of string not of list, so will throw error.\n",
     "except Exception as e:\n",
     "    print(e,type(e))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### **Index Error**\n",
+    "###### -occurs when index is out of bound.\n",
+    "###### -example: if we want to access 3rd index in list but list has only two elements."
    ]
   },
   {
@@ -258,8 +315,6 @@
     }
    ],
    "source": [
-    "#Index Error- occurs when index is out of bound.\n",
-    "#example: if we want to access 3rd index in list but list has only two elements.\n",
     "car=[\"porsche\",\"Rolls Royce\"]\n",
     "try:\n",
     "    for i in range(0,3):\n",
@@ -282,7 +337,6 @@
     }
    ],
    "source": [
-    "#key Error- occurs when we want to access a key which is not in dictionary.\n",
     "d={'jerry':1,\n",
     "    \"tom\":2\n",
     "}\n",
@@ -296,9 +350,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5>Finally</h5>\n",
-    "<h6>finally- a block in exception handling which will definitely execute.</br>\n",
-    "Doesn't bother about the result of try & except.</h6>"
+    "> #### Finally\n",
+    "> **** \n",
+    "> - finally:- a block in exception handling which will definitely execute.</br>\n",
+    "> - Doesn't bother about the result of try & except.</h6>"
    ]
   },
   {
@@ -333,8 +388,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5>Raise</h5>\n",
-    "<h6>Keyword used to raise an error with userdefined statement</h6>"
+    "#### Raise\n",
+    "***\n",
+    "- Keyword used to raise an error with userdefined statement</h6>"
    ]
   },
   {
@@ -370,8 +426,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multiple Excepts\n",
-    "<b>Multiple excepts are used to handle multiple cases of exceptions.<b>"
+    "#### Multiple Excepts\n",
+    "***\n",
+    "- *Multiple excepts are used to handle multiple cases of exceptions.*"
    ]
   },
   {
@@ -405,8 +462,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### try else Block\n",
-    "\n",
+    "### try else Block\n",
+    "***\n",
     "try:    \n",
     "    \n",
     "       code where error may occur.\n",
@@ -417,7 +474,7 @@
     "    \n",
     "       executes if try successfully executes\n",
     "       can display any info here or perform any action\n",
-    "       will not execute if execption arises.\n"
+    "       will not execute if execption arises."
    ]
   },
   {
@@ -448,7 +505,7 @@
    "metadata": {},
    "source": [
     "#### try else Finally:\n",
-    "     \n",
+    "***     \n",
     "        here it acts same as try else but finally block will always execute.\n",
     "     "
    ]
@@ -484,7 +541,7 @@
    "metadata": {},
    "source": [
     "####  Creating Custom Exception Class.\n",
-    "\n",
+    "***\n",
     "       we can create our own custom exception class by inheriting From Exception class."
    ]
   },
@@ -502,7 +559,7 @@
     }
    ],
    "source": [
-    "class NumberAsString(Exception):\n",
+    "class NumberAsString(Exception): #inheriting from Exception class.\n",
     "    pass\n",
     "\n",
     "try:\n",
@@ -512,8 +569,20 @@
     "    else:\n",
     "        raise NumberAsString\n",
     "except NumberAsString as e:\n",
-    "    print(type(e),\"You need to typecast number from string to integer.\")\n",
-    "    "
+    "    print(type(e),\"You need to typecast number from string to integer.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Created By\n",
+    "****\n",
+    "> <footer>\n",
+    ">     <h6>CopyRight: Puneet Parsad Singh </h6>\n",
+    ">      <h6>Mail: <a href=\"mailto:puneets1219@gmail.com\"> puneets1219@gmail.com </a></h6>\n",
+    ">      <h6>Linkedin:<a href=\"https://www.linkedin.com/in/sardarpuneetparsadsingh/\"> Sardar Puneet Parsad Singh</a> </h6>\n",
+    ">  </footer>\n"
    ]
   }
  ],
