table of contents

--- a/exception_handling_python.ipynb
+++ b/exception_handling_python.ipynb
@@ -13,9 +13,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"0\"></a> <br>\n",
+    " ### Table of Contents  \n",
+    "> - [Errors](#1)  \n",
+    "> - [Types of Errors](#2)  \n",
+    "> - [Exception ](#3)  \n",
+    "> - [Exception types](#4) \n",
+    "> - [Try & Catch ](#5) \n",
+    "> - [Finally](#6)    \n",
+    "> - [Raise](#7)    \n",
+    "> - [Multiple excepts](#8)   \n",
+    "> - [try else](#9)  \n",
+    "> - [try else finally](#10)  \n",
+    "> - [Custom Exception Class](#11)  \n",
+    "> - [Developer Info](#12)  \n",
+    "\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"1\"></a> \n",
     "#### Error & its types\n",
     "**Error simply means something is  incorrect or an inaccurate action.**\n",
-    "\n",
+    "<a id=\"2\"></a> \n",
     "> ##### Error's are of following types:\n",
     ">   -Compile Time.</br>\n",
     ">   -Logical Error</br>\n",
@@ -105,6 +128,7 @@
    "metadata": {},
    "source": [
     "\n",
+    "<a id=\"3\"></a> \n",
     "### Exception \n",
     "***\n",
     "> *In exception code is syntactically correct but still something is wrong (exception occurs) while executing the code.</br>*\n",
@@ -131,7 +155,7 @@
     "### Catch & Handle Exceptions\n",
     "***\n",
     "*To do so we use the try(catch) & except(handle) block.*\n",
-    "\n",
+    "<a id=\"5\"></a> \n",
     "> try:\n",
     ">\n",
     ">         contains code where error may occur.\n",
@@ -145,7 +169,7 @@
    "metadata": {},
    "source": [
     "##### Name Error\n",
-    "\n",
+    "<a id=\"4\"></a> \n",
     "  ###### this exception is raised when a variable name or function name doesn't  exist in scope."
    ]
   },
@@ -350,6 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"6\"></a> \n",
     "> #### Finally\n",
     "> **** \n",
     "> - finally:- a block in exception handling which will definitely execute.</br>\n",
@@ -388,6 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"7\"></a> \n",
     "#### Raise\n",
     "***\n",
     "- Keyword used to raise an error with userdefined statement</h6>"
@@ -426,6 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"8\"></a> \n",
     "#### Multiple Excepts\n",
     "***\n",
     "- *Multiple excepts are used to handle multiple cases of exceptions.*"
@@ -462,6 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"9\"></a> \n",
     "### try else Block\n",
     "***\n",
     "try:    \n",
@@ -504,6 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"10\"></a> \n",
     "#### try else Finally:\n",
     "***     \n",
     "        here it acts same as try else but finally block will always execute.\n",
@@ -540,6 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"11\"></a> \n",
     "####  Creating Custom Exception Class.\n",
     "***\n",
     "       we can create our own custom exception class by inheriting From Exception class."
@@ -576,6 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"12\"></a> \n",
     "##### Created By\n",
     "****\n",
     "> <footer>\n",
